fix get user post
