# miniproject-backend/docs/swagger.json
@@ -118,6 +118,9 @@
                     }
                 ],
                 "description": "Get current user",
+                "consumes": [
+                    "application/json"
+                ],
                 "produces": [
                     "application/json"
                 ],
@@ -125,6 +128,15 @@
                     "auth"
                 ],
                 "summary": "GetMe",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -252,7 +264,7 @@
                 }
             }
         },
-        "/posts/user": {
+        "/posts/my": {
             "get": {
                 "security": [
                     {
